[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assate/Font/Kenney Mini.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene/HUD/HudLabel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="HUDLabel" type="Label"]
margin_right = 47.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.862745, 0.203922, 0.223529, 1 )
text = "Hello world"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_completed" from="Tween2" to="." method="_on_Tween2_tween_completed"]
